--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/public/webp/android-chrome-192x192.png">
-    <title>Darsgah School</title>
+    <title>AfterSchool Club</title>
 </head>
 
 <body>
     <noscript>
-      <strong>We're sorry but Darsgah School doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong> Apologies ! System down...</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
